"Principled Volume" node not working anymore in EEVEE. #63377

Closed
opened 2019-04-08 00:38:09 +02:00 by Tysa · 31 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35

Blender Version
Broken: version: 2.80 (sub 54), branch: blender2.7, commit date: 2019-04-07 00:43, hash: d2d84132dd
Worked: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-24 00:06, hash: 79f67acccb

Short description of error


**UPDATE**
so the bottom line of this seems the be the 4th input "Density Attribute" on the "Principled Volume" Shader. When adding this Shader the Density Attribute is pre-set to "density" which did not cause any issue on the "Worked version" mentioned above.
However, on the newest build "broken" having this default value "density" filled in prevents the Principled Volume Shader from working at all. Removing the value fixes the issue.
This should not happen considering it comes with this value prefilled by default.


"Principled Volume" node not working anymore in EEVEE.
"Volume Scatter" node works.

"Principled Volume" works fine on 79f67acccb from 24th march.

Exact steps for others to reproduce the error

plug "Principled Volume" into World Volume.
https://gfycat.com/FamousCelebratedCaterpillar

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35 **Blender Version** Broken: version: 2.80 (sub 54), branch: blender2.7, commit date: 2019-04-07 00:43, hash: `d2d84132dd` Worked: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-24 00:06, hash: `79f67acccb` **Short description of error** ________________________ `**UPDATE**` so the bottom line of this seems the be the 4th input "Density Attribute" on the "Principled Volume" Shader. When adding this Shader the Density Attribute is pre-set to "density" which did not cause any issue on the "Worked version" mentioned above. However, on the newest build "broken" having this default value "density" filled in prevents the Principled Volume Shader from working at all. Removing the value fixes the issue. This should not happen considering it comes with this value prefilled by default. ________________________ "Principled Volume" node not working anymore in EEVEE. "Volume Scatter" node works. "Principled Volume" works fine on 79f67acccb36 from 24th march. **Exact steps for others to reproduce the error** plug "Principled Volume" into World Volume. https://gfycat.com/FamousCelebratedCaterpillar
Author

Added subscriber: @Tysa

Added subscriber: @Tysa

#63532 was marked as duplicate of this issue

#63532 was marked as duplicate of this issue

#63468 was marked as duplicate of this issue

#63468 was marked as duplicate of this issue

#63437 was marked as duplicate of this issue

#63437 was marked as duplicate of this issue

#63423 was marked as duplicate of this issue

#63423 was marked as duplicate of this issue

#63355 was marked as duplicate of this issue

#63355 was marked as duplicate of this issue

Added subscribers: @LazyDodo, @ZedDB

Added subscribers: @LazyDodo, @ZedDB

I can not reproduce this on my end (Linux, AMD).

@LazyDodo can you reproduce this?

I can not reproduce this on my end (Linux, AMD). @LazyDodo can you reproduce this?
Author

after some more testing: turning up the "Emission Strenght" makes the volume appear with the "Principled Volume" Shader. so it has to be somewhere between the "Principled Volume" Shader and "Volumetric Lighting in EEVEE.
"Principled Volume" works in Cycles btw.

after some more testing: turning up the "Emission Strenght" makes the volume appear with the "Principled Volume" Shader. so it has to be somewhere between the "Principled Volume" Shader and "Volumetric Lighting in EEVEE. "Principled Volume" works in Cycles btw.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Also cannot reproduce, in this file, "Scatter" and "Principled Volume" both work:
#63377.blend

[only thing I did was to remove the "density" attribute]

@Tysa: can you confirm that above file is working on your side?
If so, could you upload your file [which is not working] here?

Also cannot reproduce, in this file, "Scatter" and "Principled Volume" both work: [#63377.blend](https://archive.blender.org/developer/F6918530/T63377.blend) [only thing I did was to remove the "density" attribute] @Tysa: can you confirm that above file is working on your side? If so, could you upload your file [which is not working] here?
Author

yes, removing the "density" attribute makes it work. this is weird tho. this was not needed on the old build i used from 24th march.

Old build ( 79f67acccb ) screenshot: https://i.imgur.com/mPj2WNZ.jpg

yes, removing the "density" attribute makes it work. this is weird tho. this was not needed on the old build i used from 24th march. Old build ( 79f67acccb36 ) screenshot: https://i.imgur.com/mPj2WNZ.jpg
Author

not_working_volume.blend

this is the not working file. its really just the default scene, with volumes turned on in eevee settings and principled volume in world output

[not_working_volume.blend](https://archive.blender.org/developer/F6919475/not_working_volume.blend) this is the not working file. its really just the default scene, with volumes turned on in eevee settings and principled volume in world output

Added subscribers: @ganeshmarpuri, @Foaly

Added subscribers: @ganeshmarpuri, @Foaly
Member

please do not confirm your own bugs

please do not confirm your own bugs
Author

sorry @LazyDodo , first time posting. i updated the main post aswell with everything we figured out so far, hope thats okay.

sorry @LazyDodo , first time posting. i updated the main post aswell with everything we figured out so far, hope thats okay.
Clément Foucault was assigned by Sebastian Parborg 2019-04-08 19:43:50 +02:00

I can actually reproduce this too now. I don't know why I couldn't yesterday. :S

I can actually reproduce this too now. I don't know why I couldn't yesterday. :S
Member

In #63377#656906, @Tysa wrote:
sorry @LazyDodo , first time posting. i updated the main post aswell with everything we figured out so far, hope thats okay.

Yeah that's fine, but when a bug goes to confirmed it's assumed the triage team has assigned it a developer, when you put it on confirmed yourself, it's more likely it's gonna fall through the cracks. Triage team won't look at it cause it doesn't need triage, developers won't look at it since it's not listed on their todo list of bugs

> In #63377#656906, @Tysa wrote: > sorry @LazyDodo , first time posting. i updated the main post aswell with everything we figured out so far, hope thats okay. Yeah that's fine, but when a bug goes to confirmed it's assumed the triage team has assigned it a developer, when you put it on confirmed yourself, it's more likely it's gonna fall through the cracks. Triage team won't look at it cause it doesn't need triage, developers won't look at it since it's not listed on their todo list of bugs

Added subscribers: @ChuckOcheret, @Ash_The_Robot

Added subscribers: @ChuckOcheret, @Ash_The_Robot
Member

Added subscriber: @blenderjoe

Added subscriber: @blenderjoe

Added subscribers: @DJRDesign, @SomeAB, @GavinScott

Added subscribers: @DJRDesign, @SomeAB, @GavinScott

Just so it is helpful to track the cause, I'm reposting the version details I posted in the other thread (#63468).

Not Working for me in the build 009dbc2bc9 (dowloaded today: 10 April), d2d84132dd (April 7) and 700346d377 (Downloaded April 2).
Working in 1ae6aaad43 (March 22)

And yes I'm talking about the PV Shader in Eevee, not cycles. Cycles is fine.

My HW: Windows 10 64-bit, AMD Vega RX64

Just so it is helpful to track the cause, I'm reposting the version details I posted in the other thread (#63468). Not Working for me in the build 009dbc2bc9fb (dowloaded today: 10 April), d2d84132ddf9 (April 7) and 700346d377dd (Downloaded April 2). Working in 1ae6aaad43ad (March 22) And yes I'm talking about the PV Shader in Eevee, not cycles. Cycles is fine. My HW: Windows 10 64-bit, AMD Vega RX64
Author

i edited OP a day or two ago with a workaround. check if PV works when you remove the word "density" on 4th input "Density Attribute". @SomeAB

i edited OP a day or two ago with a workaround. check if PV works when you remove the word "density" on 4th input "Density Attribute". @SomeAB

yes, I have checked on my side. That workaround is working in 009dbc2bc9 . Thanks for pointing out.

yes, I have checked on my side. That workaround is working in 009dbc2bc9fb . Thanks for pointing out.
Member

Added subscriber: @sarbiewski

Added subscriber: @sarbiewski

Added subscriber: @BlandSauce

Added subscriber: @BlandSauce

This issue was referenced by 8d3af588a2

This issue was referenced by 8d3af588a23734c59f22a6feebe2d10f1a281875

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @BlenderPlebe

Added subscriber: @BlenderPlebe

Hi guys, I'm new here but I was looking for solutiuons to my problem and wound up here. I think it's relevent?

When I was following a tutorial on how to create Nebula's to learn about Volumetrics everything was working out ok at first and then suddenly my cube became a full volume and no matter what I did to the noise textures it remained so.

I closed the program and restarted from the beginning a few times and continued to have the same problem.

I read the principled node was broken so I unplugged it and plugged the rest of my network into the meterial output and it seemed to work fine. So I plugged the principled node back in and it seems to be working again for some reason.

I don't know if this is already noted or not.

Hi guys, I'm new here but I was looking for solutiuons to my problem and wound up here. I think it's relevent? When I was following a tutorial on how to create Nebula's to learn about Volumetrics everything was working out ok at first and then suddenly my cube became a full volume and no matter what I did to the noise textures it remained so. I closed the program and restarted from the beginning a few times and continued to have the same problem. I read the principled node was broken so I unplugged it and plugged the rest of my network into the meterial output and it seemed to work fine. So I plugged the principled node back in and it seems to be working again for some reason. I don't know if this is already noted or not.

@BlenderPlebe If you have found a bug, please report it as a new bug.

@BlenderPlebe If you have found a bug, please report it as a new bug.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
12 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63377
No description provided.